--- a/src/front/styles/makeImage.css
+++ b/src/front/styles/makeImage.css
@@ -30,7 +30,7 @@
     margin-top: 10px;
 }
 .mainBody{   
-    max-height: 200px;
+    height: 250px;
     margin-top: 50px;
     max-width: 354.5px; 
     
@@ -53,12 +53,14 @@
     max-height: 200px;
     overflow: hidden;
 }
-.rightStatInfo p{
-    font-size: 12px;
+.titled{
+    font-size: 15px;
     margin-bottom: 0;
-    font-weight: bold;
     word-wrap: break-word;
     
+}
+.statDetails{
+    font-size: 10px;
 }
 #stat2{
     
