--- a/src/front/styles/makeImage.css
+++ b/src/front/styles/makeImage.css
@@ -9,8 +9,8 @@
 .cardFrameBackground{
     position: absolute;
     z-index : -1;   
-    max-height : 500px;
-    max-width: 354.5px;
+    max-height : 700px;
+    max-width: 500px;
 }
 
 .cardImage{
@@ -30,7 +30,7 @@
     justify-content: center;
     margin-top: 10px;
 }
-.mainBody{   
+.mainCardBody{   
     height: 250px;
     margin-top: 50px;
     max-width: 354.5px; 
@@ -72,4 +72,17 @@
    border-radius: 40%;
    
 }
+.mainBody{
+    
+    
+}
+.imageDisplay{
+ width:500px;
+ height: 700px
+}
+.statForm{
 
+}
+.export{
+
+}
