--- a/src/front/styles/makeImage.css
+++ b/src/front/styles/makeImage.css
@@ -44,13 +44,13 @@
     right: 50px;
     text-align: center;
     padding-right: 12px;
-    max-width: 150px;
-    min-width: 100px;
+    max-width: 155px;
+    min-width: 130px;
     max-height: 590px;
     overflow: hidden;
 }
 .titled{
-    font-size: 15px;
+    font-size: 20px;
     margin-bottom: 0;
     word-wrap: break-word; 
 }
@@ -60,9 +60,10 @@
     width: 300px;
     top: 350px;
     z-index: 2;
+    overflow: hidden;
 }
 .statDetails{
-    font-size: 10px;
+    font-size: 15px;
 }
 .stat{
     width:30px;
@@ -97,6 +98,7 @@
 }
 .originStory .statDetails{
     font-size: 20px;
+    max-height: 260px;
 }
 
 
