--- a/src/front/styles/makeImage.css
+++ b/src/front/styles/makeImage.css
@@ -16,9 +16,11 @@
     position: absolute;
     z-index: 0;
     max-height: 350px;
-    max-width: 200px;
+    max-width: 350px;
+    min-height: 240px;
+    min-width: 200px;
    top: 10px;
-   left:10%;   
+   left:3%;   
 }
 #cardTitle{
 
