--- a/src/front/styles/SignInBG.css
+++ b/src/front/styles/SignInBG.css
@@ -3,12 +3,11 @@
     top: 0;
     left: 0;
     width: 100%;
-    height: 100%;
     z-index: -1; /* Ensure the background appears behind other content */
   }
   
   .background {
-    display: block;
+    display:flex;
     width: 100%;
     height: 100%;
   }
